--- a/package.json
+++ b/package.json
@@ -26,5 +26,17 @@
     "nodemon": "^2.0.3",
     "nyc": "^15.0.1",
     "prettier": "^2.0.4"
+  },
+  "dependencies": {
+    "@hapi/joi": "^15.0.3",
+    "bcrypt": "^4.0.1",
+    "bookshelf": "^1.1.1",
+    "cross-env": "^7.0.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "knex": "^0.20.13",
+    "moment": "^2.24.0",
+    "uuid": "^7.0.3"
   }
 }
