--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,10 @@
     "plugins": [
         "prettier"
     ],
+    "env": {
+        "node": true,
+        "mocha": true
+    },
     "rules": {
         "no-console": "off",
         "no-underscore-dangle": "off",
