--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Kenyan API for covid19 management",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./api/v1 --recursive --exit",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "test": "mocha ./api/v1/tests/*.test.js --recursive --exit",
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
