--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-prettier": "^3.1.2",
+    "make-runnable": "^1.3.6",
     "mocha": "^7.1.1",
     "nodemon": "^2.0.3",
     "nyc": "^15.0.1",
@@ -40,6 +41,7 @@
     "knex": "^0.20.15",
     "moment": "^2.24.0",
     "pg": "^8.0.2",
+    "sequelize": "^5.21.7",
     "uuid": "^7.0.3"
   }
 }
