--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 DB="dbname"
 DB_USER="dbuser"
 DB_PASS="dbpassword"
+
+// mongodb config
+HOST="hostname"
+PASSWORD="password"
+CLUSTERNAME="clustername"
