--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^15.0.3",
+    "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "bookshelf": "^1.1.1",
     "cross-env": "^7.0.2",
@@ -40,6 +41,8 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.15",
     "moment": "^2.24.0",
+    "mongodb": "^3.5.6",
+    "mongoose": "^5.9.10",
     "pg": "^8.0.2",
     "sequelize": "^5.21.7",
     "uuid": "^7.0.3"
