--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha ./api/v1/tests/*.test.js --recursive --exit",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "fetch":"nodemon ./api/v1/controllers/newsController.js"
+    "fetch": "nodemon ./api/v1/controllers/newsController.js"
   },
   "repository": {
     "type": "git",
@@ -29,7 +29,8 @@
     "mocha": "^7.1.1",
     "nodemon": "^2.0.3",
     "nyc": "^15.0.1",
-    "prettier": "^2.0.4"
+    "prettier": "^2.0.4",
+    "should": "^13.2.3"
   },
   "dependencies": {
     "@hapi/joi": "^15.0.3",
@@ -44,6 +45,7 @@
     "moment": "^2.24.0",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.10",
+    "morgan": "^1.10.0",
     "pg": "^8.0.2",
     "sequelize": "^5.21.7",
     "uuid": "^7.0.3"
