--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,7 +26,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
-    - run: npx sequelize db:migrate
+    - run: npx sequelize-cli db:migrate
     - run: npm test
       env:
         CI: true
