--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,11 +9,24 @@ on:
   pull_request:
     branches: [ master ]
 
-jobs:
+jobs:     
   build:
 
     runs-on: ubuntu-latest
-
+    container: node:10.18-jessie
+    services:
+      postgres:
+        
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres 
+          
+        options: >-
+         --health-cmd pg_isready
+         --health-interval 10s
+          --health-timeout 5s 
+           --health-retries 5
+            
     strategy:
       matrix:
         node-version: [10.x,12.x]
@@ -26,12 +39,12 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
-    - run: sudo apt-get update
-    - run: sudo apt install postgresql-client
-    - run: psql -U postgres -h localhost -p 5432
     - run: npx sequelize-cli init
     - run: npx sequelize-cli db:migrate
     - run: npm test
       env:
+        POSTGRES_HOST: postgres
+        POSTGRES_PORT: 5432  
         NODE_ENV: test
+         
         CI: true
