--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,7 +13,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    container: node:10.18-jessie
+    container: node:lts
     services:
       postgres:
         
@@ -24,16 +24,16 @@ jobs:
         options: >-
          --health-cmd pg_isready
                    
-    strategy:
-      matrix:
-        node-version: [10.x,12.x]
+#     strategy:
+#       matrix:
+#         node-version: [10.x,12.x]
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
+#     - name: Use Node.js ${{ matrix.node-version }}
+#       uses: actions/setup-node@v1
+#       with:
+#         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
     - run: npx sequelize-cli init
