--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,6 +36,8 @@ jobs:
 #         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm run build --if-present
+    #- run: psql -U postgres
+    - run: pg_isready  
     - run: npx sequelize-cli db:migrate
     - run: npm test
       env:
