--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,45 +5,35 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ wilcox-dev ]
+    branches: [ master ]
   pull_request:
-    branches: [ wilcox-dev ]
+    branches: [ master ]
 
 jobs:     
   build:
 
     runs-on: ubuntu-latest
-    container: node:lts
-    services:
-      postgres:
-        
-        image: postgres
-        env:
-          POSTGRES_PASSWORD: postgres 
-          
-        options: >-
-         --health-cmd pg_isready
                    
-#     strategy:
-#       matrix:
-#         node-version: [10.x,12.x]
+    strategy:
+      matrix:
+        node-version: [10.x,12.x]
 
     steps:
     - uses: actions/checkout@v2
-#     - name: Use Node.js ${{ matrix.node-version }}
-#       uses: actions/setup-node@v1
-#       with:
-#         node-version: ${{ matrix.node-version }}
+    - uses: harmon758/postgresql-action@v1
+      with:
+        postgresql version: '11' 
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
     - run: npm ci
-    - run: node client.js
     - run: npm run build --if-present
     #- run: psql -U postgres
     - run: pg_isready  
     - run: npx sequelize-cli db:migrate
     - run: npm test
       env:
-        POSTGRES_HOST: postgres
-        POSTGRES_PORT: 5432  
         NODE_ENV: test
          
         CI: true
