--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -30,7 +30,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     #- run: psql -U postgres
-    - run: pg_isready  
+    #- run: pg_isready  
     - run: npx sequelize-cli db:migrate
     - run: npm test
       env:
