--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -31,6 +31,9 @@ jobs:
     - run: npm run build --if-present
     #- run: psql -U postgres
     #- run: pg_isready  
+    - run: sudo apt update
+    - run: sudo apt install postgresql postgresql-contrib
+    - run: psql -U postgres -h localhost -p 5432
     - run: npx sequelize-cli db:migrate
     - run: npm test
       env:
