--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Kenyan API for covid19 management",
   "main": "index.js",
   "scripts": {
-    "test": "mocha ./api/v1/tests/*.test.js --recursive --exit",
+    "test": "nyc --reporter=lcov --reporter=text --reporter=html mocha ./api/v1/tests/*.test.js --recursive --exit",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "fetch": "nodemon ./api/v1/controllers/newsController.js"
@@ -27,6 +27,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "make-runnable": "^1.3.6",
     "mocha": "^7.1.1",
+    "mocha-lcov-reporter": "^1.3.0",
     "nodemon": "^2.0.3",
     "nyc": "^15.0.1",
     "prettier": "^2.0.4",
