--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.20.15",
     "moment": "^2.24.0",
