--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "nyc --reporter=lcov --reporter=text --reporter=html mocha ./api/v1/tests/*.test.js --recursive --exit",
-        "start": "node server.js",
-        "dev": "nodemon server.js",
+        "start": "cross-env NODE_ENV=development node server.js",
+        "dev": "cross-env NODE_ENV=development nodemon server.js",
         "fetch": "node ./api/v1/controllers/saveTweets.js",
         "test-users": "node ./api/v1/models/0-usersModel.js"
     },
