--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "axios": "^0.19.2",
         "bcrypt": "^4.0.1",
         "bookshelf": "^1.1.1",
+        "cors": "^2.8.5",
         "cross-env": "^7.0.2",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
