--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,8 @@
         "no-return-assign": "off",
         "consistent-return": "off",
         "no-use-before-define": "off",
-        "import/no-extraneous-dependencies":"off",
+        "no-param-reassign": "off",
+        "import/no-extraneous-dependencies": "off",
         "func-names": "off",
         "prettier/prettier": [
             "error"
