--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ DB="dbname"
 DB_USER="dbuser"
 DB_PASS="dbpassword"
 SECRET="anything here"
+SESSION_SECRET="anything here"
 
 // mongodb config
 HOST="hostname"
