TODO: will fix this mess later

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,9 @@
         "import/no-extraneous-dependencies": "off",
         "func-names": "off",
         "prettier/prettier": [
-            "error"
+            "error",{
+                "endOfLine": "auto"
+            }
         ]
     }
 }
