add hospital url

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ DB_USER="dbuser"
 DB_PASS="dbpassword"
 SECRET="anything here"
 SESSION_SECRET="anything here"
+HOSPITAL_URL="https://services.arcgis.com/CmINIEzurW7Tagtl/arcgis/rest/services/Health_facilities/FeatureServer/0/query?where=1%3D1&outFields=*&outSR=4326&f=json"
+
