--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-prettier": "^3.1.3",
-        "make-runnable": "^1.3.6",
         "mocha": "^7.1.2",
         "mocha-lcov-reporter": "^1.3.0",
         "nodemon": "^2.0.3",
@@ -40,23 +39,15 @@
         "@hapi/joi": "^15.1.1",
         "axios": "^0.19.2",
         "bcrypt": "^4.0.1",
-        "bookshelf": "^1.1.1",
         "connect-session-sequelize": "^6.1.1",
-        "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
         "cross-env": "^7.0.2",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "express-jwt": "^5.3.3",
         "express-session": "^1.17.1",
         "jsonwebtoken": "^8.5.1",
-        "knex": "^0.20.15",
-        "moment": "^2.25.3",
-        "mongodb": "^3.5.7",
-        "mongoose": "^5.9.14",
         "morgan": "^1.10.0",
         "pg": "^8.2.0",
-        "sequelize": "^5.21.9",
-        "uuid": "^7.0.3"
+        "sequelize": "^5.21.9"
     }
 }
