--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
         "no-unused-vars": "warn",
         "import/no-extraneous-dependencies": "off",
         "func-names": "off",
+        "import/newline-after-import": "warn",
         "prettier/prettier": [
             "warn",
             {
